--- a/hugo.yaml
+++ b/hugo.yaml
@@ -28,7 +28,7 @@ menu:
       url: https://bsky.app/profile/pooper.net.au
       weight: 10
     - name: Linkedin
-      url: "https://www.linkedin.com/in/cjhallau"
+      url: "https://www.linkedin.com/in/pepperpepperpepper"
       weight: 50
 
 params:
